--- a/MyDriveService/Web.config
+++ b/MyDriveService/Web.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <connectionStrings>
+    <add name="DriveConnectionString" connectionString="server=localhost;Integrated Security=True;database=MyDriveDB;uid=sa;password=1;" />
+  </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -26,6 +29,20 @@
       <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+   <services>  
+      <service name="MyDriveService.AccessService">  
+       <endpoint   
+          address="/"
+          binding="wsHttpBinding"    
+          contract="MyDriveService.IAccessService"  />  
+       </service>  
+       <service name="MyDriveService.StorageService">  
+           <endpoint   
+              address="/drive"
+              binding="wsDualHttpBinding"    
+              contract="MyDriveService.IStorrageService"  />  
+       </service>  
+      </services>  
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
