--- a/MyDriveService/MyDriveService.csproj
+++ b/MyDriveService/MyDriveService.csproj
@@ -69,10 +69,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Service1.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataBaseClass.cs" />
+    <Compile Include="StorageFile.cs" />
     <Compile Include="Service1.svc.cs">
       <DependentUpon>Service1.svc</DependentUpon>
     </Compile>
