fixed sync files after auth

--- a/MyDriveService/Web.config
+++ b/MyDriveService/Web.config
@@ -41,7 +41,15 @@
           contract="MyDriveService.IStorrageService"  />  
        <endpoint address ="mex" binding="mexHttpBinding" contract ="IMetadataExchange"/>
        </service>  
-      </services>  
+      </services>
+    <bindings>
+      <basicHttpBinding>
+        <binding maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"
+            maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
@@ -64,7 +72,7 @@
   <connectionStrings>
     <add
       name="MyDriveCS"
-      connectionString="Data Source=310-1;
+      connectionString="Data Source=RUSLAN\SQLEXPRESS;
       Initial Catalog=MyDriveDB;
       User ID=sa;
       Password=1"
