--- a/MyDriveService/bin/MyDriveService.dll.config
+++ b/MyDriveService/bin/MyDriveService.dll.config
@@ -72,7 +72,7 @@
   <connectionStrings>
     <add
       name="MyDriveCS"
-      connectionString="Data Source=RUSLAN\SQLEXPRESS;
+      connectionString="Data Source=310-1;
       Initial Catalog=MyDriveDB;
       User ID=sa;
       Password=1"
