--- a/MyDriveService/bin/MyDriveService.dll.config
+++ b/MyDriveService/bin/MyDriveService.dll.config
@@ -32,7 +32,7 @@
       <service name="MyDriveService.AccessService">  
        <endpoint   
           address="auth"
-          binding="basicHttpBinding"    
+          binding="wsHttpBinding"    
           contract="MyDriveService.IAccessService"  /> 
         
        <endpoint   
@@ -49,6 +49,33 @@
             maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
         </binding>
       </basicHttpBinding>
+     <wsHttpBinding>
+    <!--The following is the expanded configuration section for a-->
+    <!--WSHttpBinding. Each property is configured with the default--> 
+    <!--value. See the ReliableSession, TransactionFlow, -->
+    <!--TransportSecurity, and MessageSecurity samples in the WS -->
+    <!--directory to learn how to configure these features. -->
+    <binding name="Binding1"
+              bypassProxyOnLocal="false" 
+              transactionFlow="false" 
+              hostNameComparisonMode="StrongWildcard"
+              maxBufferPoolSize="524288" 
+              maxReceivedMessageSize="65536"
+              messageEncoding="Text" 
+              textEncoding="utf-8" 
+              useDefaultWebProxy="true"
+              allowCookies="false">
+      <reliableSession ordered="true" 
+                       inactivityTimeout="00:10:00"
+                       enabled="false" />
+      <security mode="Message">
+        <message clientCredentialType="Windows" 
+                 negotiateServiceCredential="true"
+                 algorithmSuite="Default" 
+                 establishSecurityContext="true" />
+      </security>
+    </binding>
+  </wsHttpBinding>
     </bindings>
   </system.serviceModel>
   <system.webServer>
