--- a/MyDriveService/Web.config
+++ b/MyDriveService/Web.config
@@ -16,11 +16,18 @@
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
-        <behavior>
+        <behavior name="Behavior1">
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
           <serviceDebug includeExceptionDetailInFaults="false" />
+        <serviceCredentials>
+          <clientCertificate>
+             <authentication customCertificateValidatorType="" certificateValidationMode="PeerTrust" />
+          </clientCertificate>
+          <serviceCertificate findValue="54 b6 52 c9 7d e5 45 a6 85 76 f7 2f e5 3b 57 a9 78 01 6d f4" storeLocation="LocalMachine" storeName="My" x509FindType="FindByThumbprint" />
+          <userNameAuthentication userNamePasswordValidationMode="Custom" customUserNamePasswordValidatorType="MyDriveService.CustomUserNamePasswordValidator, MyDriveService" />  
+        </serviceCredentials>
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -29,10 +36,11 @@
     </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
    <services>  
-      <service name="MyDriveService.AccessService">  
+      <service name="MyDriveService.AccessService" behaviorConfiguration="Behavior1">  
        <endpoint   
           address="auth"
-          binding="wsHttpBinding"    
+          binding="wsHttpBinding"
+          bindingConfiguration="Binding1"
           contract="MyDriveService.IAccessService"  /> 
         
        <endpoint   
@@ -50,11 +58,6 @@
         </binding>
       </basicHttpBinding>
      <wsHttpBinding>
-    <!--The following is the expanded configuration section for a-->
-    <!--WSHttpBinding. Each property is configured with the default--> 
-    <!--value. See the ReliableSession, TransactionFlow, -->
-    <!--TransportSecurity, and MessageSecurity samples in the WS -->
-    <!--directory to learn how to configure these features. -->
     <binding name="Binding1"
               bypassProxyOnLocal="false" 
               transactionFlow="false" 
@@ -69,10 +72,7 @@
                        inactivityTimeout="00:10:00"
                        enabled="false" />
       <security mode="Message">
-        <message clientCredentialType="Windows" 
-                 negotiateServiceCredential="true"
-                 algorithmSuite="Default" 
-                 establishSecurityContext="true" />
+        <message clientCredentialType="UserName"  />
       </security>
     </binding>
   </wsHttpBinding>
@@ -99,7 +99,7 @@
   <connectionStrings>
     <add
       name="MyDriveCS"
-      connectionString="Data Source=RUSLAN\SQLEXPRESS;
+      connectionString="Data Source=310-1;
       Initial Catalog=MyDriveDB;
       User ID=sa;
       Password=1"
